<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="6dp"
    android:paddingTop="6dp"
    android:layout_marginLeft="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/days_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/day_of_the_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/twelve_font"
        android:text="@string/day_of_week"
        android:textColor="@color/colorWhiteText"/>

    <ImageView
        android:id="@+id/weather_img_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/small_weather_icon"
        android:layout_marginTop="@dimen/small_marginn_top"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/weather_result_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_marginn_top"
        android:textSize="@dimen/twelve_font"
        android:text="@string/current_temperature"
        android:textColor="@color/colorWhiteText"/>

    <TextView
        android:id="@+id/weather_small_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_marginn_top"
        android:textSize="@dimen/eight_font"
        android:text="@string/current_temperature"
        android:textColor="@color/colorWhiteText"/>
</LinearLayout>
